# NSU_OOP_CXX

./: .gitignore  README.md
Task0/: CMakeLists.txt  README.md  main.cpp
Task0/module1/: CMakeLists.txt
Task0/module2/: CMakeLists.txt
Task0/module3/: CMakeLists.txt  module3.cpp
Task1/: CMakeLists.txt  README.md
Task1/example/: main.cpp
Task1/lib/: README.md
Task1/lib/big_int/: CMakeLists.txt
Task1/lib/big_int/include/: big_int.h
Task1/lib/big_int/src/: big_int.cpp
Task1/lib/big_int/test/: CMakeLists.txt  tests_big_int.cpp
Task1/lib/google_tests/: CMakeLists.txt  README.md
Task1/lib/google_tests/docs/: advanced.md  faq.md  gmock_cook_book.md  primer.md
Task1/lib/google_tests/docs/_layouts/: default.html
Task1/lib/google_tests/docs/reference/: assertions.md  testing.md
Task1/lib/google_tests/googlemock/test/: BUILD.bazel
Task1/lib/google_tests/googletest/test/: BUILD.bazel
Task1/lib/string_arithmetic/: CMakeLists.txt
Task1/lib/string_arithmetic/include/: string_arithmetic.h
Task1/lib/string_arithmetic/src/: string_arithmetic.cpp
Task1/lib/string_arithmetic/test/: CMakeLists.txt  tests_string_arithmetic.cpp
Task1/src/: CMakeLists.txt  main.cpp
Task1/src/big_int/: CMakeLists.txt  big_int.cpp  big_int.h
Task1/src/big_int/string_arithmetic/: CMakeLists.txt  string_arithmetic.cpp  string_arithmetic.h
Task2/: .gitignore  CMakeLists.txt  README.md
Task2/example/: main.cpp
Task2/lib/cl_parser/: CMakeLists.txt
Task2/lib/cl_parser/test/: tests_cl_parser.cpp
Task2/lib/game/: CMakeLists.txt
Task2/lib/game/src/: game.cpp
Task2/lib/game/test/: tests_game.cpp
Task2/lib/matrix/: CMakeLists.txt
Task2/lib/modes/: CMakeLists.txt
Task2/lib/strategy/: CMakeLists.txt
Task2/lib/strategy/pavlov/: CMakeLists.txt
Task2/lib/strategy/tit_for_tat_with_forgiveness/: CMakeLists.txt
Task2/libs/abstract_mode/: CMakeLists.txt
Task2/libs/abstract_mode/include/abstract_mode/: abstract_mode.h
Task2/libs/abstract_mode/include/loaded_strategy/: loaded_strategy.h
Task2/libs/abstract_mode/src/: abstract_mode.cpp  loaded_strategy.cpp
Task2/libs/abstract_mode/test/: tests_loaded_strategy.cpp
Task2/libs/cl_parser/: CMakeLists.txt
Task2/libs/cl_parser/include/cl_parser/: cl_parser.h
Task2/libs/cl_parser/src/: cl_parser.cpp
Task2/libs/cl_parser/test/: tests_cl_parser.cpp
Task2/libs/game/: CMakeLists.txt
Task2/libs/game/include/game/: game.h
Task2/libs/game/src/: game.cpp
Task2/libs/game/test/: tests_game.cpp
Task2/libs/matrix/: CMakeLists.txt
Task2/libs/matrix/include/matrix/: matrix.h
Task2/libs/matrix/src/: matrix.cpp
Task2/libs/matrix/test/: tests_matrix.cpp
Task2/libs/modes/: CMakeLists.txt
Task2/libs/modes/abstract_mode/: CMakeLists.txt
Task2/libs/modes/detailed_mode/: CMakeLists.txt
Task2/libs/modes/detailed_mode/include/detailed_mode/: detailed_mode.h
Task2/libs/modes/detailed_mode/src/: detailed_mode.cpp
Task2/libs/modes/fast_mode/: CMakeLists.txt
Task2/libs/modes/fast_mode/include/fast_mode/: fast_mode.h
Task2/libs/modes/fast_mode/src/: fast_mode.cpp
Task2/libs/modes/include/mode_creator/: mode_creator.h
Task2/libs/modes/mode_creator/: CMakeLists.txt
Task2/libs/modes/mode_creator/include/mode_creator/: mode_creator.h
Task2/libs/modes/src/: mode_creator.cpp
Task2/libs/modes/tournament_mode/: CMakeLists.txt
Task2/libs/modes/tournament_mode/src/: tournament_mode.cpp
Task2/libs/strategies/: CMakeLists.txt
Task2/libs/strategies/always_cooperate/: CMakeLists.txt
Task2/libs/strategies/always_defect/: CMakeLists.txt
Task2/libs/strategies/grim_trigger/: CMakeLists.txt
Task2/libs/strategies/grim_trigger/test/: tests_grim_trigger.cpp
Task2/libs/strategies/non_trivial/probability/: CMakeLists.txt
Task2/libs/strategies/non_trivial/tit_for_tat/: CMakeLists.txt
Task2/libs/strategies/pavlov/: CMakeLists.txt
Task2/libs/strategies/pavlov/src/: pavlov.cpp
Task2/libs/strategies/pavlov/test/: tests_pavlov.cpp
Task2/libs/strategies/random/: CMakeLists.txt
Task2/libs/strategies/random/src/: random.cpp
Task2/libs/strategies/src/: strategy_creator.cpp
Task2/libs/strategies/strategy_creator/: CMakeLists.txt
Task2/libs/strategies/strategy_creator/src/: strategy_creator.cpp
Task2/libs/strategies/strategy_creator/test/: tests_strategy_creator.cpp
Task2/libs/strategies/strategy_interface/: CMakeLists.txt
Task2/libs/strategies/test/: tests_pavlov.cpp  tests_strategy_creator.cpp  tests_tit_for_tat_with_forgiveness.cpp
Task2/libs/strategies/tit_for_tat/: CMakeLists.txt
Task2/libs/strategies/tit_for_tat/src/: tit_for_tat.cpp
Task2/libs/strategies/tit_for_tat/test/: tests_tit_for_tat.cpp
Task2/libs/strategies/tit_for_tat_with_forgiveness/: CMakeLists.txt
Task2/libs/strategies/tit_for_tat_with_forgiveness/src/: tit_for_tat_with_forgiveness.cpp
Task2/libs/strategies/tit_for_tat_with_forgiveness/test/: tests_tit_for_tat_with_forgiveness.cpp
Task2/libs/strategies/trivial/always_cooperate/: CMakeLists.txt
Task2/libs/strategies/trivial/always_desert/: CMakeLists.txt
Task2/libs/strategies/trivial/grim_trigger/: CMakeLists.txt
Task2/libs/strategies/trivial/random/: CMakeLists.txt
Task2/libs/strategies/trivial/tit_for_tat/: CMakeLists.txt
Task2/libs/strategy_interface/: CMakeLists.txt
Task2/libs/strategy_interface/include/strategy_interface/: strategy_interface.h
Task2/matrix/: matrix.txt
Task2/src/: main.cpp
Task4/: CMakeLists.txt  README.md
Task4/example/: escape.txt  main.cpp  other_delim.txt  test.csv
Task4/lib/CSV_parser/: CMakeLists.txt
Task4/lib/CSV_parser/include/: CSV_parser.h  CSV_parser_errors.h
Task4/lib/CSV_parser/src/: CSV_parser_errors.cpp
Task4/lib/CSV_parser/test/: tests_CSV_parser.cpp
Task4/lib/CSV_parser/test/files/: correct.csv  escape.txt
Task4/lib/print_tuple/: CMakeLists.txt
Task4/lib/print_tuple/include/: print_tuple.h
Task4/lib/print_tuple/test/: tests_print_tuple.cpp
Task4/lib/tuple_utility/: CMakeLists.txt
Task4/lib/tuple_utility/include/: tuple_utility.h
Task4/lib/tuple_utility/test/: tests_tuple_utility.cpp
(+25 files in other folders)
